Finished draft for section 2

--- a/doc/bibliografia.bib
+++ b/doc/bibliografia.bib
@@ -116,6 +116,27 @@ doi = {10.1007/978-3-642-23074-5_2}
 	howpublished = {\url{https://en.wikipedia.org/wiki/BitTorrent}}
 }
 
+@article{technosocial,
+author = {Woodhouse, Edward and Patton, Jason W.},
+title = {Design by Society: Science and Technology Studies and the Social Shaping of Design},
+journal = {Design Issues},
+volume = {20},
+number = {3},
+pages = {1-12},
+year = {2004},
+doi = {10.1162/0747936041423262},
+
+URL = { 
+        https://doi.org/10.1162/0747936041423262
+    
+},
+eprint = { 
+        https://doi.org/10.1162/0747936041423262
+    
+}
+
+}
+
 
 
 
