--- a/doc/secciones/02_descripcion.tex
+++ b/doc/secciones/02_descripcion.tex
@@ -57,9 +57,7 @@ On the one hand, the selection, crossover and replacement operators focus on the
 On the other hand, mutation and initialization diversify by generating rather different solutions from the existing ones; by doing so, the algorithm is able to explore new regions of the search space as well as avoiding getting stuck in local optima.
 
 \section{Distributed Systems}
-\begin{quotation}
-\textit{A distributed system is a collection of independent computers that appears to its users as a single coherent system.}
-\end{quotation}
+A distributed system is a collection of independent computers that appears to its users as a single coherent system.
 
 \begin{figure}[h!]
 \centering
@@ -194,6 +192,54 @@ A good example of system using this approach is BitTorrent\cite{bittorrent} (Fig
 \end{figure}  
 
 
-
-
 \section{Technosocial Systems}
+\begin{quote}
+\textit{Technosocial Systems are people and technologies that combine to work as heterogeneous but functional wholes.}
+    \begin{flushright}
+        \tiny{--- Edward Woodhouse and Jason W. Patton \cite{technosocial}}
+    \end{flushright}
+\end{quote}
+
+At the beginning of the 21st century, the web started shifting from static data that is read-only for consumers to a more complex and dynamic paradigm where communication between users is the main objective. The best example to showcase this transformation is social networks, where users generate the content that is subsequently consumed by other users.
+
+At the same time, although with a slower pace, an even more advanced web paradigm is emerging. Build on top of the communication-oriented model previously described, this paradigm is characterized by co-operation between users of a platform towards a common goal. 
+
+Examples of successful communities that follow this paradigm are \textit{Wikipedia}, where users actively contribute with the objective of creating a free-access encyclopedia. And \textit{Schema.org}, with the mission to create structured data on the Internet that is computer-understandable.
+
+This project falls into the last category by enabling cooperation between users of the platform towards the common goal of solving difficult problems that need from a high computing power to be addressed.
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
