--- a/doc/bibliografia.bib
+++ b/doc/bibliografia.bib
@@ -51,13 +51,13 @@ doi = {10.1109/SECSE.2009.5069155}
 }
 
 @misc{galist,
-	author       = {}, 
+	author       = {Various}, 
 	title        = {Genetic Algorithms},
 	howpublished = {\url{http://www.aic.nrl.navy.mil/galist/}}
 }
 
 @misc{wikipedia_cap,
-	author       = {}, 
+	author       = {Various}, 
 	title        = {CAP Theorem},
 	howpublished = {\url{https://en.wikipedia.org/wiki/CAP_theorem}}
 }
@@ -72,7 +72,6 @@ doi = {10.1109/SECSE.2009.5069155}
 author = {Hieu Vu, Quang and Lupu, Mihai and Chin Ooi, Beng},
 year = {2010},
 month = {01},
-pages = {},
 title = {Peer-to-Peer Computing - Principles and Applications.},
 isbn = {978-3-642-03513-5},
 journal = {Peer-to-Peer Computing: Principles and Applications},
@@ -111,7 +110,7 @@ doi = {10.1007/978-3-642-23074-5_2}
 
 
 @misc{bittorrent,
-	author       = {}, 
+	author       = {Various}, 
 	title        = {BitTorrent},
 	howpublished = {\url{https://en.wikipedia.org/wiki/BitTorrent}}
 }
