--- a/doc/secciones/02_descripcion.tex
+++ b/doc/secciones/02_descripcion.tex
@@ -178,7 +178,7 @@ Peer-to-peer networks implements a virtual network in the application layer that
 
 
 \subsubsection*{Hybrid P2P Systems}
-This architecture is a mixture of both Client-Server and Peer-to-Peer systems where certain functionalities are provided by servers\cite{hybrid-p2p}. This approach enables the developer to make trade-offs between the advantages of using a centralized approach that is easier to maintain and develop, and using a peer-to-peer unstructured network.
+This architecture is a mixture of both Client-Server and Peer-to-Peer systems where certain functionalities are provided by servers. This approach enables the developer to make trade-offs between the advantages of using a centralized approach that is easier to maintain and develop, and using a peer-to-peer unstructured network.
 
 This model often achieves better performance than pure Client-Server or Peer-to-Peer. Since certain functions that tends to create high networking traffic in a P2P system can by avoided using a centralized approach.
 
