--- a/doc/bibliografia.bib
+++ b/doc/bibliografia.bib
@@ -136,7 +136,53 @@ eprint = {
 
 }
 
+@article{ismail,
+author = {Ali Ismail, Muhammad},
+year = {2004},
+month = {08},
+pages = {83 - 87},
+title = {Parallel Genetic Algorithms (PGAs): Master slave paradigm approach using MPI},
+isbn = {0-7803-8655-8},
+journal = {E-Tech 2004: An International Multi-Topic Conference},
+doi = {10.1109/ETECH.2004.1353848}
+}
 
+@INPROCEEDINGS{zhang1,
+author={L. {Xu} and F. {Zhang}},
+booktitle={Eighth ACIS International Conference on Software Engineering, Artificial Intelligence, Networking, and Parallel/Distributed Computing (SNPD 2007)},
+title={Parallel Particle Swarm Optimization for Attribute Reduction},
+year={2007},
+volume={1},
+number={},
+pages={770-775},
+keywords={particle swarm optimisation;rough set theory;parallel particle swarm optimization;attribute reduction;rough set theory;information theory;Particle swarm optimization;Set theory;Information systems;Master-slave;Educational institutions;Large-scale systems;Maintenance engineering;Genetic algorithms;Ant colony optimization;Evolutionary computation},
+doi={10.1109/SNPD.2007.224},
+ISSN={},
+month={July}
+}
+
+@INPROCEEDINGS{zhang2,
+author={W. {Yu} and W. {Zhang}},
+booktitle={2006 8th international Conference on Signal Processing},
+title={Study on Function Optimization Based on Master-slave Structure Genetic Algorithm},
+year={2006},
+volume={3},
+number={},
+pages={},
+keywords={decoding;genetic algorithms;search problems;function optimization;master-slave structure genetic algorithm;harmonizing mechanism;hierarchical structure;decoding;master level chromosome;Master-slave;Genetic algorithms;Biological cells;Evolution (biology);Algorithm design and analysis;Educational technology;Design optimization;Decoding;Biological information theory;Convergence},
+doi={10.1109/ICOSP.2006.345926},
+ISSN={2164-5221},
+month={Nov}
+}
+
+@article{erick,
+author = {Cantu-Paz, Erick},
+year = {2000},
+month = {01},
+pages = {},
+title = {Efficient and Accurate Parallel Genetic Algorithms},
+journal = {Boston, Kluwer Academic Publishers}
+}
 
 
 
