--- a/doc/bibliografia.bib
+++ b/doc/bibliografia.bib
@@ -184,5 +184,235 @@ title = {Efficient and Accurate Parallel Genetic Algorithms},
 journal = {Boston, Kluwer Academic Publishers}
 }
 
+@article{2,
+author = {Alba, Enrique and Dorronsoro, Bernabe and Giacobini, M and Tomassini, Marco},
+year = {2019},
+month = {06},
+title = {Decentralized Cellular Evolutionary Algorithms}
+}
+
+@InProceedings{5,
+author="Alba, Enrique
+and Troya, Jos{\'e} Ma",
+editor="Schoenauer, Marc
+and Deb, Kalyanmoy
+and Rudolph, G{\"u}nther
+and Yao, Xin
+and Lutton, Evelyne
+and Merelo, Juan Julian
+and Schwefel, Hans-Paul",
+title="Cellular Evolutionary Algorithms: Evaluating the Influence of Ratio",
+booktitle="Parallel Problem Solving from Nature PPSN VI",
+year="2000",
+publisher="Springer Berlin Heidelberg",
+address="Berlin, Heidelberg",
+pages="29--38",
+abstract="Spatially structured evolutionary algorithms (EAs) have shown to be endowed with useful features for global optimization. Distributed EAs (dEA) and cellular EAs (cEA) are two of the most widely known types of structured algorithms. In this paper we deal with cellular EAs. Two important parameters guiding the search in a cEA are the population topology and the neighborhood defined on it. Here we first review some theoretical results which show that a cEA with a 2D grid can be easily tuned to shift from exploration to exploitation. We initially make a study on the relationship between the topology and the neighborhood by defining a ratio measure between they two. Then, we encompass a set of tests aimed at discovering the performance that different ratio values have on different classes of problems. We find out that, with the same neighborhood, rectangular grids have some advantages in multimodal and epistatic problems, while square ones are more efficient for solving deceptive problems and for simple function optimization. Finally, we propose and study a cEA in which the ratio is dynamically changed.",
+isbn="978-3-540-45356-7"
+}
+
+@InProceedings{12,
+author="Burczynski, Tadeusz
+and Kus, Waclaw",
+editor="Wyrzykowski, Roman
+and Dongarra, Jack
+and Paprzycki, Marcin
+and Wa{\'{s}}niewski, Jerzy",
+title="Optimization of Structures Using Distributed and Parallel Evolutionary Algorithms",
+booktitle="Parallel Processing and Applied Mathematics",
+year="2004",
+publisher="Springer Berlin Heidelberg",
+address="Berlin, Heidelberg",
+pages="572--579",
+abstract="This paper is devoted to applications of evolutionary algorithms into optimal design of nonlinear structures and identification of holes. The parallel and the distributed evolutionary algorithms are considered. The optimum criterion is to minimize the plastic strain areas and stress values or an identification functional. The fitness functions are computed using the finite element method or the coupled finite and boundary element method.",
+isbn="978-3-540-24669-5"
+}   
+
+@article{13,
+  title={Optimization and defect identification using distributed evolutionary algorithms},
+  author={Tadeusz Burczynski and Waclaw Kus and Adam Dlugosz and Piotr Orantek},
+  journal={Eng. Appl. of AI},
+  year={2004},
+  volume={17},
+  pages={337-344}
+}
+
+@inproceedings{30,
+ author = {Du, Xin and Ding, Lixin and Jia, Liyuan},
+ title = {Asynchronous Distributed Parallel Gene Expression Programming Based on Estimation of Distribution Algorithm},
+ booktitle = {Proceedings of the 2008 Fourth International Conference on Natural Computation - Volume 01},
+ series = {ICNC '08},
+ year = {2008},
+ isbn = {978-0-7695-3304-9},
+ pages = {433--437},
+ numpages = {5},
+ url = {https://doi.org/10.1109/ICNC.2008.497},
+ doi = {10.1109/ICNC.2008.497},
+ acmid = {1473332},
+ publisher = {IEEE Computer Society},
+ address = {Washington, DC, USA}
+}
+
+@article{57,
+author = {Herrera, F. and Lozano, M. and Moraga, C.},
+title = {Hierarchical distributed genetic algorithms},
+journal = {International Journal of Intelligent Systems},
+volume = {14},
+number = {11},
+pages = {1099-1121},
+doi = {10.1002/(SICI)1098-111X(199911)14:11<1099::AID-INT3>3.0.CO;2-O},
+year = {1999}
+}
+
+@inproceedings{58,
+author = {Hidalgo, Ignacio and Vega, Francisco},
+year = {2005},
+month = {10},
+pages = {1645 - 1652 Vol. 2},
+title = {Balancing the computation effort in genetic algorithms},
+volume = {2},
+isbn = {0-7803-9363-5},
+journal = {2005 IEEE Congress on Evolutionary Computation, IEEE CEC 2005. Proceedings},
+doi = {10.1109/CEC.2005.1554886}
+}
+
+@article{62,
+author = {Ishimizu, T and Tagawa, Kiyoharu},
+year = {2010},
+month = {01},
+pages = {2-8},
+title = {A structured differential evolution for various network topologies},
+volume = {4},
+journal = {Int. J. Comput. Commun.}
+}
+
+@article{140,
+author = { DARRELL   WHITLEY  and  TIMOTHY   STARKWEATHER },
+title = {GENITOR II: a distributed genetic algorithm},
+journal = {Journal of Experimental \& Theoretical Artificial Intelligence},
+volume = {2},
+number = {3},
+pages = {189-214},
+year  = {1990},
+publisher = {Taylor & Francis},
+doi = {10.1080/09528139008953723},
+
+URL = { 
+        https://doi.org/10.1080/09528139008953723
+    
+},
+eprint = { 
+        https://doi.org/10.1080/09528139008953723
+    
+}
+
+}
+
+@inproceedings{68,
+author = {Kirley, Michael and L. Stewart, Robert},
+year = {2007},
+month = {01},
+pages = {845-852},
+title = {An Analysis of the Effects of Population Structure on Scalable Multiobjective Optimization Problems},
+journal = {Proceedings of GECCO 2007: Genetic and Evolutionary Computation Conference},
+doi = {10.1145/1276958.1277124}
+}
+
+@InProceedings{89,
+author="Michel, Ren{\'e}
+and Middendorf, Martin",
+editor="Eiben, Agoston E.
+and B{\"a}ck, Thomas
+and Schoenauer, Marc
+and Schwefel, Hans-Paul",
+title="An island model based ant system with lookahead for the shortest supersequence problem",
+booktitle="Parallel Problem Solving from Nature --- PPSN V",
+year="1998",
+publisher="Springer Berlin Heidelberg",
+address="Berlin, Heidelberg",
+pages="692--701",
+isbn="978-3-540-49672-4"
+}
+
+@InProceedings{112,
+author="Sefrioui, Mourad
+and P{\'e}riaux, Jacques",
+editor="Schoenauer, Marc
+and Deb, Kalyanmoy
+and Rudolph, G{\"u}nther
+and Yao, Xin
+and Lutton, Evelyne
+and Merelo, Juan Julian
+and Schwefel, Hans-Paul",
+title="A Hierarchical Genetic Algorithm Using Multiple Models for Optimization",
+booktitle="Parallel Problem Solving from Nature PPSN VI",
+year="2000",
+publisher="Springer Berlin Heidelberg",
+address="Berlin, Heidelberg",
+pages="879--888",
+isbn="978-3-540-45356-7"
+}
+
+@article{soa-dea,
+title = "Distributed evolutionary algorithms and their models: A survey of the state-of-the-art",
+journal = "Applied Soft Computing",
+volume = "34",
+pages = "286 - 300",
+year = "2015",
+issn = "1568-4946",
+doi = "https://doi.org/10.1016/j.asoc.2015.04.061",
+url = "http://www.sciencedirect.com/science/article/pii/S1568494615002987",
+author = "Yue-Jiao Gong and Wei-Neng Chen and Zhi-Hui Zhan and Jun Zhang and Yun Li and Qingfu Zhang and Jing-Jing Li",
+keywords = "Distributed evolutionary computation, Coevolutionary computation, Evolutionary algorithms, Global optimization, Multiobjective optimization",
+}
+
+@inproceedings{p2p-ea,
+ author = {Wickramasinghe, W. R. M. U. K. and van Steen, M. and Eiben, A. E.},
+ title = {Peer-to-peer Evolutionary Algorithms with Adaptive Autonomous Selection},
+ booktitle = {Proceedings of the 9th Annual Conference on Genetic and Evolutionary Computation},
+ series = {GECCO '07},
+ year = {2007},
+ isbn = {978-1-59593-697-4},
+ location = {London, England},
+ pages = {1460--1467},
+ numpages = {8},
+ url = {http://doi.acm.org/10.1145/1276958.1277225},
+ doi = {10.1145/1276958.1277225},
+ acmid = {1277225},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {autonomous selection, distributed EA, gossiping, newscast protocol, parameter adaptation}
+} 
+
+@Article{evag,
+author="Laredo, J. L. J.
+and Eiben, A. E.
+and van Steen, M.
+and Merelo, J. J.",
+title="EvAg: a scalable peer-to-peer evolutionary algorithm",
+journal="Genetic Programming and Evolvable Machines",
+year="2010",
+month="Jun",
+day="01",
+volume="11",
+number="2",
+pages="227--246",
+issn="1573-7632",
+doi="10.1007/s10710-009-9096-z",
+url="https://doi.org/10.1007/s10710-009-9096-z"
+}
+
+@article{newscast,
+author = {van Steen, Maarten},
+year = {2002},
+month = {11},
+pages = {},
+title = {Large-Scale Newscast Computing on the Internet}
+}
+
+
+
+
+
 
 
