--- a/doc/bibliografia.bib
+++ b/doc/bibliografia.bib
@@ -410,6 +410,28 @@ pages = {},
 title = {Large-Scale Newscast Computing on the Internet}
 }
 
+@misc{django-websites,
+	author       = {DDI Development}, 
+	title        = {Top 10 sites built with Django Framework},
+	howpublished = {\url{http://ddi-dev.com/blog/programming/top-sites-built-django-framework/}}
+}
+
+@misc{lmap,
+	title        = {LAMP (software bundle)},
+	howpublished = {\url{https://en.wikipedia.org/wiki/LAMP_(software_bundle)}}
+}
+
+@misc{django,
+	title        = {The web framework for perfectionists with deadlines.},
+	howpublished = {\url{https://www.djangoproject.com/}}
+}
+
+@misc{rails,
+	title        = {Imagine what you could build if you learned Ruby on Rails…},
+	howpublished = {\url{https://rubyonrails.org/}}
+}
+
+
 
 
 
